--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
     <script type="text/javascript" src="akiba.js"></script>
-    <title>Akiba Twitter Map &beta; by @e_scapegoat</title>
+    <title>Akiba Twitter Map &beta; by @yagiyu</title>
   </head>
   <body>
     <div id="map"></div>
